--- a/HRC.html
+++ b/HRC.html
@@ -124,17 +124,14 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
                         <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Measures to protect the movement of refugees</a><br>
-                        <a href="">Measures to combat international human trafficking</a><br>
-                        <a href="">Addressing the issue of child labourers in Asia</a><br>
-                        <a href="">Measures to rehabilitate internally displaced persons</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20protect%20the%20movement%20of%20refugees.pdf", title="Measures to protect the movement of refugees">Topic 1</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20combat%20international%20human%20trafficking.pdf", title="Measures to combat international human trafficking">Topic 2</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20address%20the%20issue%20of%20child%20labourers%20in%20Asia.pdf", title="Addressing the issue of child labourers in Asia">Topic 3</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20rehabilitate%20internally%20displaced%20persons.pdf", title="Measures to rehabilitate internally displaced persons">Topic 4</a><br>
 				    <br>
-                    -->
 				</p>
             </div>
             <div class="col-md-4">
