--- a/committees.html
+++ b/committees.html
@@ -101,19 +101,20 @@
     </div>
 
     <div class="container-fluid white wow slideInRight" id="committee-view1">
-        <section class="committee" id="ga1">
+        <a href="GA1.html"><section class="committee" id="ga1">
             <h1 class="display-4 text-dark white">General Assembly 1</h1>
             <hr text-light>
             <h5 class="text-dark"> Combating the spread of diseases in South-East Asia
                 <br><br>Addressing the misconduct of UN peacekeepers
                 <br><br>Improving access to clean water and medical infrastructure in Afghanistan
                 <br><br>Ensuring voting security in transitional countries in the Balkan region
-            <h5>
+            </h5>
             <br>
         </section>
+        </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view2">
-        <section class="committee" id="ga2">
+        <a href="GA2.html"><section class="committee" id="ga2">
             <br><br>
             <h1 class="display-4 text-light">General Assembly 2</h1>
             <hr class="text-light">
@@ -121,24 +122,27 @@
                 <br><br>Measures to aid the transition to renewable energy in developing East Asian nations
                 <br><br>Protecting the rights of non-combatant individuals in in the Yemeni Civil War
                 <br><br>Measures to recover radiation contaminated zones
-            <h5>
-                <br>
+            </h5>
+            <br>
         </section>
+        </a>
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view3">
-        <section class="committee" id="ENV">
+        <a href="ENV.html"><section class="committee" id="ENV">
             <h1 class="display-4 text-dark white">Environment Commission</h1>
             <hr>
             <h5 class="text-dark"> Preventing the acceleration of climate change
                 <br><br>Measures to restore environments damaged by man-made disasters in the Caribbean
                 <br><br>Combating desertification in Sub-Saharan Africa
                 <br><br>Sustainable urban planning in rapidly developing countries
-            <h5>
+            </h5>
             <br>
         </section>
+        </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view4">
+        <a href="ECOSOC.html">
         <section class="committee" id="ECOSOC">
             <br>
             <h1 class="display-4 text-light">Economic and Social Council</h1>
@@ -147,25 +151,29 @@
                 <br><br>Improving infrastructure for technological growth in developing African economies
                 <br><br>Addressing the economic crisis in Venezuela
                 <br><br>Addressing the role of the internet in international crime
-            <h5>
-                <br>
-        </section>
+            </h5>
+            <br>
+            </section>
+        </a>
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view5">
-        <section class="committee" id="HRC">
+        <a href="HRC.html">
+            <section class="committee" id="HRC">
             <h1 class="display-4 text-dark white">Human Rights Council</h1>
             <hr>
             <h5 class="text-dark"> Measures to protect the movement of refugees
                 <br><br>Measures to combat international human trafficking
                 <br><br>Addressing the issue of child labourers in Asia
                 <br><br>Measures to rehabilitate internally displaced persons
-            <h5>
+            </h5>
             <br>
-        </section>
+            </section>
+        </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view6">
-        <section class="committee" id="SPC">
+        <a href="SPC.html">
+            <section class="committee" id="SPC">
             <br>
             <h1 class="display-4 text-light">Special Conference on Non-State Actors</h1>
             <hr class="text-light">
@@ -173,13 +181,15 @@
                 <br><br>Measures to facilitate peace discussion with remaining ISIS groups in Syria
                 <br><br>Measures to reduce violence from drug cartels in Mexico
                 <br><br>Preventing the distribution of counterfeit medicine
-            <h5>
-                <br>
-        </section>
+            </h5>
+            <br>
+            </section>
+        </a>
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view7">
-        <section class="committee" id="DIS">
+        <a href="DIS.html">
+            <section class="committee" id="DIS">
             <h1 class="display-4 text-dark white">Disarmament Council</h1>
             <hr>
             <h5 class="text-dark"> Preventing the militarization of outer space
@@ -188,30 +198,35 @@
                 <br><br>Providing a resolution for the possibility of a nuclear crisis
             <h5>
             <br>
-        </section>
+            </section>
+        </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view8">
-        <section class="committee" id="SC">
+        <a href="SC.html">
+            <section class="committee" id="SC">
             <br>
             <h1 class="display-4 text-light">Security Council</h1>
             <hr class="text-light">
             <h5 class="text-light"> The regulation of international arms corporations
                 <br><br>De-escalation of nuclear armament in the DPRK
                 <br><br>Measures to reduce the armament of paramilitary forces in the Libyan Civil War
-            <h5>
-                <br>
-        </section>
+            </h5>
+            <br>
+            </section>
+        </a>
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view9">
-        <section class="committee" id="AP">
+        <a href="AP.html">
+            <section class="committee" id="AP">
             <h1 class="display-4 text-dark white">Advisory Panel</h1>
             <hr>
             <h5 class="text-dark"> The question of humanitarian exemptions on the sanction regime of the DPRK
                 <br><br>Rebuilding infrastructure damaged as a result of the Libyan Civil War
-            <h5>
+            </h5>
             <br>
-        </section>
+            </section>
+        </a>
     </div>
 
 
