--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="h3 alert alert-primary">Welcome to DIMUN</p>
             </div>
             <div class="col-md-4">
-                <a href=so.html><strong><p class="alert alert-primary">Committee chairs are out!</p></strong></a>
+                <a href=committees.html><strong><p class="alert alert-primary">Chair reports are out!</p></strong></a>
             </div>
         </div>
 		<br>
