--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -124,17 +124,14 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
+				<br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
-				    <!----
-                    <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Addressing the issue of urban slums in South America</a><br>
-                        <a href="">Improving infrastructure for technological growth in developing African economies</a><br>
-                        <a href="">Addressing the economic crisis in Venezuela</a><br>
-                        <a href="">Addressing the role of the internet in international crime</a><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20issue%20of%20urban%20slums%20in%20South%20America.pdf", title="Addressing the issue of urban slums in South America">Topic 1</a><br>
+                        <!--<a href="", title="Improving infrastructure for technological growth in developing African economies">--->Topic 2<!--/a--><br>
+                        <!---a href="", title="Addressing the economic crisis in Venezuela"--->Topic 3<!--/a--><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>
 				    <br>
-                    -->
                 </p>
             </div>
             <div class="col-md-4">
