SC Chair Push_1

--- a/SC.html
+++ b/SC.html
@@ -123,16 +123,13 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
                         <strong>Click to download the following research reports;</strong><br>
-                        <a href="">The regulation of international arms corporations</a><br>
-                        <a href="">De-escalation of nuclear armament in the DPRK</a><br>
-                        <a href="">Measures to reduce the armament of paramilitary forces in the Libyan Civil War</a><br>
+                        <!--a href="", title="The regulation of international arms corporations"-->Topic 1</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SC/De-escalation%20of%20nuclear%20armament%20in%20the%20DPRK.pdf", title="De-escalation of nuclear armament in the DPRK">Topic 2</a><br>
+                        <!--a href="", title="Measures to reduce the armament of paramilitary forces in the Libyan Civil War"-->Topic 3</a><br>
 				    <br>
-                    -->
 				</p>
             </div>
             <div class="col-md-4">
