--- a/SPC.html
+++ b/SPC.html
@@ -129,7 +129,7 @@
                         <strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Measures%20to%20improve%20recognition%20of%20Kurdish%20minorities%20in%20the%20Middle%20East.pdf", title="Measures to improve recognition of Kurdish minorities in the Middle East">Topic 1</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Measures%20to%20facilitate%20peace%20discussion%20with%20remaining%20ISIS%20groups%20in%20Syria.pdf", title="Measures to facilitate peace discussion with remaining ISIS groups in Syria">Topic 2</a><br>
-                        Topic 3<br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Measures%20to%20reduce%20violence%20from%20drug%20cartels%20in%20Mexico.pdf", title="Measures to reduce violence from drug cartels in Mexico">Topic 3</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Preventing%20the%20distribution%20of%20counterfeit%20medicine.pdf", title="Preventing the distribution of counterfeit medicine">Topic 4</a><br>
 				    <br>
 				</p>
