--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -128,8 +128,8 @@
 				     Research reports will be uploaded as soon as they come in.
                         <strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20issue%20of%20urban%20slums%20in%20South%20America.pdf", title="Addressing the issue of urban slums in South America">Topic 1</a><br>
-                        <!--<a href="", title="Improving infrastructure for technological growth in developing African economies">--->Topic 2<!--/a--><br>
-                        <!---a href="", title="Addressing the economic crisis in Venezuela"--->Topic 3<!--/a--><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Improving%20infrastructure%20for%20technological%20growth%20in%20developing%20African%20Economies.pdf", title="Improving infrastructure for technological growth in developing African economies">Topic 2</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20economic%20crisis%20in%20Venezuela.pdf", title="Addressing the economic crisis in Venezuela">Topic 3</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ECOSOC/Addressing%20the%20role%20of%20the%20internet%20in%20international%20crime.pdf", title="Addressing the role of the internet in international crime">Topic 4</a><br>
 				    <br>
                 </p>
