Edit content similarity

--- a/ENV.html
+++ b/ENV.html
@@ -126,7 +126,7 @@
                 <p align="center">
 				<br><br><br>
                     <br>
-                        <strong>Click to download the research reports for...</strong><br>
+                        <strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ENV/Preventing%20the%20acceleration%20of%20climate%20change.pdf", title="Preventing the acceleration of climate change">Topic 1</a><br>
                         <!--a href="", title="Measures to restore environments damaged by man-made disasters in the Caribbean"-->Topic 2<!--/a--><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ENV/Combating%20desertification%20in%20Sub-Saharan%20Africa.pdf", title="Combating desertification in Sub-Saharan Africa">Topic 3</a><br>
