--- a/HRC.html
+++ b/HRC.html
@@ -126,7 +126,7 @@
                 <p align="center">
 				<br><br><br>
                     <br>
-                        <strong>Click to download the following research reports;</strong><br>
+                    <strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20protect%20the%20movement%20of%20refugees.pdf", title="Measures to protect the movement of refugees">Topic 1</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20combat%20international%20human%20trafficking.pdf", title="Measures to combat international human trafficking">Topic 2</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/HRC/Measures%20to%20address%20the%20issue%20of%20child%20labourers%20in%20Asia.pdf", title="Addressing the issue of child labourers in Asia">Topic 3</a><br>
