--- a/SC.html
+++ b/SC.html
@@ -128,7 +128,7 @@
                         <strong>Click to download the following research reports;</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/bdd8d9138106206189395a26ae547c802c972c9d/Chair%20Reports/SC/The%20regulation%20of%20International%20Arms%20Corporations.pdf", title="The regulation of international arms corporations">Topic 1</a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SC/De-escalation%20of%20nuclear%20armament%20in%20the%20DPRK.pdf", title="De-escalation of nuclear armament in the DPRK">Topic 2</a><br>
-                        <!--a href="", title="Measures to reduce the armament of paramilitary forces in the Libyan Civil War">Topic 3</a--><br>
+                        <!--a href="", title="Measures to reduce the armament of paramilitary forces in the Libyan Civil War"-->Topic 3<!--/a--><br>
 				    <br>
 				</p>
             </div>
