--- a/ENV.html
+++ b/ENV.html
@@ -128,7 +128,7 @@
                     <br>
                         <strong>Click to download research reports for...</strong><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ENV/Preventing%20the%20acceleration%20of%20climate%20change.pdf", title="Preventing the acceleration of climate change">Topic 1</a><br>
-                        <!--a href="", title="Measures to restore environments damaged by man-made disasters in the Caribbean"-->Topic 2<!--/a--><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/3b280d79cbe8afbc329558226237f4ecc8ed8c6f/Chair%20Reports/ENV/Measures%20to%20restore%20environments%20damaged%20by%20man-made%20disasters%20in%20the%20Caribbean.pdf", title="Measures to restore environments damaged by man-made disasters in the Caribbean">Topic 2<a><br>
                         <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/ENV/Combating%20desertification%20in%20Sub-Saharan%20Africa.pdf", title="Combating desertification in Sub-Saharan Africa">Topic 3</a><br>
                         <!--a href="", title="Sustainable urban planning in rapidly developing countries"-->Topic 4<!--/a--><br>
 				    <br>
