--- a/SC.html
+++ b/SC.html
@@ -99,7 +99,7 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The security council seeks to promote world peace, engaging with the most critical issues facing the security of the world.
-						<br>The chairs for this council are; Si In Park and Eric Choi.<br>
+						<br>The chairs for this council are; Si In Park and Ally Huang.<br>
 						<br>The topics for this committee are;<br>
 							<li>The regulation of international arms corporations</li>
                         	<li>De-escalation of nuclear armament in the DPRK</li>
@@ -134,9 +134,9 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Eric Choi.jpg" alt="" class="image">
+                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
                     <div class="overlay">
-                        <div class="text-com">Eric Choi</div>
+                        <div class="text-com">Ally Huang</div>
                     </div>
                 </div>
             </div>
