--- a/so.html
+++ b/so.html
@@ -116,7 +116,7 @@
 					Guan Rong Tan<br>
 					<strong>Security Council [SC]</strong><br>
 					Si In Park<br>
-					Eric Choi<br>
+					Ally Huang<br>
 					<strong>Advisory Panel [AP]</strong><br>
 					Jullia Kim<br>
 					Erik Chen<br>
