aaaaand hello press
Ignore the sorry pdf for now...just there until we get all 3 dimunites

--- a/press.html
+++ b/press.html
@@ -91,6 +91,27 @@
             <div class="team">
                 <h1>Press</h1>
                 <a href="photos.html"><button type="button" class="btn btn-primary">Photos</button></a>
+                
+                <hr>
+                <h2> DIMUNITE IX issue </h2>
+                <div class="row">
+                    <div class="col-sm-4 mb-3">
+                        <a href="img/sorry.pdf", target="blank">
+                            <img src="img/Issue 1.jpg" class="img-fluid z-depth-1">
+                        </a>
+                    </div>
+                    <div class="col-sm-4 mb-3">
+                        <a href="img/sorry.pdf", target="blank">
+                            <img src="img/Issue 2.jpg" class="img-fluid z-depth-1">
+                        </a>
+                    </div>
+                    <div class="col-sm-4 mb-3">
+                        <a href="img/sorry.pdf", target="blank">
+                            <img src="img/Issue 3.jpg" class="img-fluid z-depth-1">
+                        </a>
+                    </div>
+                </div>
+                
                 <hr>
                 <h2> DIMUNITE VIII issue </h2>
                 <div class="row">
