ALL AMENDMENT SYSTEMS UPLOADED
+ Tech support

--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
         <div class="text-center container">
             <!-- Section: Contact v.2 -->
     <section class="my-5">
-
+        <br><br><br>
       <!-- Section heading -->
-      <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
+      <h2 class="h1-responsive font-weight-bold text-center my-5">Tech support</h2>
       <!-- Section description -->
       <p class="text-center w-responsive mx-auto mb-5">The DIMUN Tech team will ensure that your concerns/questions be addressed quickly.</p>
 
