Changed to room numbers

--- a/contact.html
+++ b/contact.html
@@ -117,15 +117,15 @@
               <div class="col-md-6">
                 <div class="md-form mb-0">
                   <select type="text", id="committee", class="form-control validate">
-                        <option value="GA1">GA1</option>
-						<option value="GA2">GA2</option>
-						<option value="ENV">ENV</option>
-                        <option value="ECOSOC">ECOSOC</option>
-						<option value="HRC">HRC</option>
-						<option value="SPC">SPC</option>
-                        <option value="DIS">DIS</option>
-						<option value="SC">SC</option>
-						<option value="AP">AP</option>
+                        <option value="321">GA1</option>
+						<option value="320">GA2</option>
+						<option value="311">ENV</option>
+                        <option value="312">ECOSOC</option>
+						<option value="316">HRC</option>
+						<option value="317">SPC</option>
+                        <option value="307">DIS</option>
+						<option value="318">SC</option>
+						<option value="306">AP</option>
 				    </select>
                 </div>
               </div>
