--- a/SC.html
+++ b/SC.html
@@ -156,7 +156,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mb-md-0 mb-5">
 
-            <h2 class="h1-responsive font-weight-bold text-center my-5">Ammendments<hr></h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-5">Amendments<hr></h2>
 
           <form>
 
