--- a/DIS.html
+++ b/DIS.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="refresh" content="5">
     <title>DIMUN IX</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
@@ -180,6 +181,13 @@
                 </div>
               </div>
 
+              <div class="col-md-12">
+                <div class="md-form mb-0">
+                  <input type="text" id="clause" class="form-control validate" required required minlength="1">
+                  <label data-error="invalid" data-success="valid" for="clause" class="">Clause number</label>
+                </div>
+              </div>
+
               <!-- Grid column -->
               <div class="col-md-12">
                 <div class="md-form mb-0">
@@ -191,17 +199,7 @@
                 </div>
               </div>
             </div>
-            <!-- Grid row -->
 
-            <!-- Grid row -->
-
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-
-            <!-- Grid row -->
-
-            <!-- Grid row -->
             <div class="row">
 
               <!-- Grid column -->
@@ -226,7 +224,7 @@
 
         <div class="col-md-6 mb-md-0 mb-5">
             <h2 class="h1-responsive font-weight-bold text-center my-5">Resolutions<hr></h2>
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1JGEkKO7AoQSot_odEwrFpeQWnaq87ekEs#list" style=" border:0;width:100%;height:100%;"></iframe>
+            <iframe src="https://drive.google.com/embeddedfolderview?id=1JGEkKO7AoQSot_odEwrFpeQWnaq87ekE#list" style=" border:0;width:100%;height:100%;"></iframe>
         </div>
 
         </div>
@@ -261,19 +259,20 @@
     $("#send").click(function(){
             document.getElementById("country").checkValidity()
             && document.getElementById("email").checkValidity()
-            && document.getElementById("SCA")
-            && document.getElementById("notes").checkValidity()
+            && document.getElementById("clause").checkValidity();
 
             var country = $("#country").val();
             var email = $("#email").val();
             var SCA = $("#SCA").val();
             var notes = $("#notes").val();
+            var clause = $("#clause").val();
 
             var template_params = {
             "email": email,
             "country": country,
             "SCA": SCA,
-            "notes": notes
+            "notes": notes,
+            "clause": clause
             };
 
             var service_id = "default_service";
