--- a/ENV.html
+++ b/ENV.html
@@ -181,6 +181,13 @@
                 </div>
               </div>
 
+              <div class="col-md-12">
+                <div class="md-form mb-0">
+                  <input type="text" id="clause" class="form-control validate" required required minlength="1">
+                  <label data-error="invalid" data-success="valid" for="clause" class="">Clause number</label>
+                </div>
+              </div>
+
               <!-- Grid column -->
               <div class="col-md-12">
                 <div class="md-form mb-0">
@@ -192,17 +199,7 @@
                 </div>
               </div>
             </div>
-            <!-- Grid row -->
 
-            <!-- Grid row -->
-
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-
-            <!-- Grid row -->
-
-            <!-- Grid row -->
             <div class="row">
 
               <!-- Grid column -->
@@ -261,23 +258,24 @@
     $("#send").click(function(){
             document.getElementById("country").checkValidity()
             && document.getElementById("email").checkValidity()
-            && document.getElementById("SCA")
-            && document.getElementById("notes").checkValidity()
+            && document.getElementById("clause").checkValidity();
 
             var country = $("#country").val();
             var email = $("#email").val();
             var SCA = $("#SCA").val();
             var notes = $("#notes").val();
+            var clause = $("#clause").val();
 
             var template_params = {
             "email": email,
             "country": country,
             "SCA": SCA,
-            "notes": notes
+            "notes": notes,
+            "clause": clause
             };
 
             var service_id = "default_service";
-            var template_id = "EENV";
+            var template_id = "ENV";
             emailjs.send(service_id, template_id, template_params);
 
             alert("Amendment sent.")
