--- a/GA1.html
+++ b/GA1.html
@@ -159,7 +159,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mb-md-0 mb-5">
 
-            <h2 class="h1-responsive font-weight-bold text-center my-5">Amendmentss<hr></h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-5">Amendments<hr></h2>
 
           <form>
 
