--- a/press.html
+++ b/press.html
@@ -83,7 +83,7 @@
 </header>
 
     <section class="section-header text-center" id="section-header">
-        <strong><h1 class="display-1">Dimunite</h1></strong>
+        <strong><h1 class="display-1">DIMUNITE</h1></strong>
     </section>
 
     <section>
@@ -92,11 +92,13 @@
                 <h1>Press</h1>
                 <a href="photos.html"><button type="button" class="btn btn-primary">Photos</button></a>
                 
+                <br><br><br>
+                <h5>Click on the issue to download</h5>
                 <hr>
                 <h2> DIMUNITE IX issue </h2>
                 <div class="row">
                     <div class="col-sm-4 mb-3">
-                        <a href="img/sorry.pdf", target="blank">
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/IX/ISSUE_1.pdf", target="blank", title="Download Issue 1">
                             <img src="img/Issue 1.jpg" class="img-fluid z-depth-1">
                         </a>
                     </div>
