--- a/press.html
+++ b/press.html
@@ -103,7 +103,7 @@
                         </a>
                     </div>
                     <div class="col-sm-4 mb-3">
-                        <a href="img/sorry.pdf", target="blank">
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/IX/ISSUE_2.pdf", target="blank",title="Download Issue 2">
                             <img src="img/Issue 2.jpg" class="img-fluid z-depth-1">
                         </a>
                     </div>
