Update: Committee photos

--- a/HRC.html
+++ b/HRC.html
@@ -90,7 +90,7 @@
     <section class="com-head">
         <div class="row" style="margin-right:0;">
             <div class="col-md-7 com-pic">
-                <img src="img/committee1.jpeg" style="height:83vh;width:auto;">
+                <img src="img/HRC.jpg" style="height:83vh;width:auto;">
             </div>
             <div class="col-md-5 com-text">
                 <div class="text-center">
