--- a/press.html
+++ b/press.html
@@ -108,7 +108,7 @@
                         </a>
                     </div>
                     <div class="col-sm-4 mb-3">
-                        <a href="img/sorry.pdf", target="blank">
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/IX/ISSUE_3.pdf", target="blank">
                             <img src="img/Issue 3.jpg" class="img-fluid z-depth-1">
                         </a>
                     </div>
