--- a/photos.html
+++ b/photos.html
@@ -92,7 +92,51 @@
                 <h1>Photo</h1>
                 <a href="press.html"><button type="button" class="btn btn-primary">Dimunite</button></a>
                 <hr>
-                <p> Photos are coming shortly</p>
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/1.jpeg">
+                    </div>
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/2.JPG">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/3.JPG">
+                    </div>
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/4.JPG">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/5.JPG">
+                    </div>
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/6.JPG">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/7.JPG">
+                    </div>
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/8.jpeg">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/9.JPG">
+                    </div>
+                    <div class="col-md-6 mb-6">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/10.JPG">
+                    </div>
+                </div>
+                <br>
             </div>
         </div>
     </section>
