--- a/photos.html
+++ b/photos.html
@@ -133,7 +133,7 @@
                         <img class="img-fluid z-depth-1 hoverable" src="img/photo/9.JPG">
                     </div>
                     <div class="col-md-6 mb-6">
-                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/10.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/photo/10.jpg">
                     </div>
                 </div>
                 <br>
